--- a/index.html
+++ b/index.html
@@ -91,17 +91,18 @@
  <!-- Experiencia  -->
  <div class="container">
    <div class="row justify-content-md-center">
-     <div class="col col-lg-6 text-center">
-       <h2 class="text-uppercase mb-4">Mi Experiencia</h2>
-       <hr>
+       <div class="col col-lg-6 text-center">
+         <h2 class="text-uppercase mb-4">Mi Experiencia</h2>
+      </div>
    </div>
+
    <div class="row justify-content-md-center">
      <div class="col col-lg-4 text-center">
        <hr>
      </div>
   </div>
 
-  <div class="row justify-content-md-center">
+  <div class="row justify-content-md-center my-4">
     <div class="col col-lg-3 text-center">
       <img src="assets/img/imagenexcel.jpg" alt="vba excel">
     </div>
