--- a/index.html
+++ b/index.html
@@ -44,139 +44,100 @@
                 </div>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#seis">Contacto</a>
+                <a class="nav-link" href="#contacto">Contacto</a>
               </li>
             </ul>
           </div>
     </nav>
   </header>
 
-  <!-- Imagen Central  -->
-  <div class="content" id="inicio">
-      <div class="text-center">
-        <img src="assets/img/yosoy.png" width="50%">
-      </div>
-      <div class="idname">
-         <h2></h2>
-         <h1></h1>
-      </div>
-   </div>
-
- <!-- Resumen  -->
- <div class="container">
-   <div class="row justify-content-md-center">
-     <div class="col col-lg-6 text-center">
-       <h5>Economista Universidad de Los Andes 2000. Mérida. Venezuela. MsC Políticas Económicas Públicas. Universidad de Los Andes 2007. Especialista en Formulación y Evaluación de Proyectos 2005.  </h5>
-      </div>
-   </div>
-   <div class="row justify-content-md-center">
-     <div class="col col-lg-3 text-center">
-       <hr>
-     </div>
-  </div>
-
-  <div class="row justify-content-md-center">
-    <div class="col col-lg-3">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    </div>
-    <div class="col-md-auto">
-    </div>
-    <div class="col col-lg-3">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    </div>
-  </div>
-</div>
- <!-- Resumen  -->
-
- <!-- Experiencia  -->
- <div class="container">
-   <div class="row justify-content-md-center">
-       <div class="col col-lg-6 text-center">
-         <h2 class="text-uppercase mb-4">Mi Experiencia</h2>
-      </div>
-   </div>
-
-   <div class="row justify-content-md-center">
-     <div class="col col-lg-4 text-center">
-       <hr>
-     </div>
-  </div>
-
-  <div class="row justify-content-md-center my-4">
-    <div class="col col-lg-3 text-center">
-      <img src="assets/img/imagenexcel.jpg" alt="vba excel">
-    </div>
-    <div class="col-md-auto">
-      <img src="assets/img/imagenblanco.jpg" alt="imagen blanco" width="30%">
-    </div>
-    <div class="col col-lg-3 text-center">
-      <img src="assets/img/imageneconomia.jpg" alt="imagen Formulación de proyectos económicos">
-    </div>
-  </div>
-</div>
- <!-- Experiencia  -->
-
- <!-- Web Page  -->
- <div class="container">
-   <div class="row justify-content-md-center">
-       <div class="col col-lg-4 text-center">
-         <img src="assets" alt="">
-      </div>
-      <div class="col col-lg-4 text-center">
-        <h2 class="text-uppercase mb-4">Mi Experiencia</h2>
-     </div>
-     <div class="col col-lg-4 text-center">
-       <h2 class="text-uppercase mb-4">Mi Experiencia</h2>
-    </div>
-
-
-   </div>
-
-
-  <div class="row justify-content-md-center my-4">
-    <div class="col col-lg-3 text-center">
-      <img src="assets/img/imagenexcel.jpg" alt="vba excel">
-    </div>
-    <div class="col-md-auto">
-      <img src="assets/img/imagenblanco.jpg" alt="imagen blanco" width="30%">
-    </div>
-    <div class="col col-lg-3 text-center">
-      <img src="assets/img/imageneconomia.jpg" alt="imagen Formulación de proyectos económicos">
-    </div>
-  </div>
-</div>
- <!-- Web Pages  -->
-
-
-
-
-  <section class="text-center">
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-  </section>
-  <section class="text-center p-4" id="dos">
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-  </section>
-  <section class="text-center p-4" id="tres">
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-  </section>
-  <section class="text-center p-4" id="cuatro">
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-  </section>
-  <section class="text-center p-4" id="cinco">
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-  </section>
-  <section class="text-center p-4" id="seis">
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-  </section>
-
-
   <body>
 
+
+      <!-- Imagen Central  -->
+      <div class="content" id="inicio">
+          <div class="text-center">
+            <img src="assets/img/yosoy.png" width="50%">
+          </div>
+          <div class="idname">
+             <h2></h2>
+             <h1></h1>
+          </div>
+       </div>
+
+     <!-- Resumen  -->
+     <div class="container">
+       <div class="row justify-content-md-center">
+         <div class="col col-lg-6 text-center">
+           <h5>Economista Universidad de Los Andes 2000. Mérida. Venezuela. MsC Políticas Económicas Públicas. Universidad de Los Andes 2007. Especialista en Formulación y Evaluación de Proyectos 2005.  </h5>
+          </div>
+       </div>
+       <div class="row justify-content-md-center">
+         <div class="col col-lg-3 text-center">
+           <hr>
+         </div>
+      </div>
+
+      <div class="row justify-content-md-center">
+        <div class="col col-lg-3">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+        <div class="col-md-auto">
+        </div>
+        <div class="col col-lg-3">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+      </div>
+    </div>
+     <!-- Resumen  -->
+
+     <!-- Experiencia  -->
+     <div class="container colorfondo">
+       <div class="row justify-content-md-center">
+           <div class="col col-lg-6 text-center">
+             <h2 class="text-uppercase mb-4">Mi Experiencia</h2>
+          </div>
+       </div>
+
+       <div class="row justify-content-md-center">
+         <div class="col col-lg-4 text-center">
+           <hr>
+         </div>
+      </div>
+
+      <div class="row justify-content-md-center">
+        <div class="col col-md-4 text-center">
+          <img src="assets/img/imagenexcel.jpg" alt="vba excel">
+        </div>
+
+        <div class="col col-md-4 text-center">
+          <img src="assets/img/imageneconomia.jpg" alt="imagen Formulación de proyectos económicos">
+        </div>
+      </div>
+    </div>
+     <!-- Experiencia  -->
+
+     <!-- Web Page  -->
+     <div class="container my-4 pb-4">
+       <div class="row justify-content-md-center">
+        <div class="col col-md-4 text-center">
+          <img src="assets/img/webpage1Meet&Coffee.jpg" alt="Web Page Meet & Coffee" width="90%">
+        </div>
+        <div class="col col-md-4 text-center">
+          <img src="assets/img/webpage2Iguana.jpg" alt="Web Page Iguana" width="90%">
+        </div>
+        <div class="col col-md-4 text-center">
+          <img src="assets/img/webpage3Suricata.jpg" alt="Web Page Suricata" width="90%">
+        </div>
+      </div>
+    </div>
+     <!-- Web Pages  -->
+
+<section id="contacto">
+<div class="text-center p-4 ml-4">
+<div class="typeform-widget" data-url="https://joseruben.typeform.com/to/IsMPPg" style="width: 100%; height: 400px;"></div> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script> <div style="font-family: Sans-Serif;font-size: 12px;color: #999;opacity: 0.5; padding-top: 5px;"> powered by <a href="https://admin.typeform.com/signup?utm_campaign=IsMPPg&utm_source=typeform.com-01DZ9XRXJ9SE9VFH8BWTW1C1KR-free&utm_medium=typeform&utm_content=typeform-embedded-poweredbytypeform&utm_term=ES" style="color: #999" target="_blank">Typeform</a> </div>
+</div>
+</section>
 
 
 
