--- a/index.html
+++ b/index.html
@@ -4,167 +4,242 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Mis trabajos">
-    <meta name="keywords" content="curriculo, jose, ruben, cerrada curriculum, vitae">
-    <meta name="author" content="José Rubén Cerrada enero-2020">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,500&display=swap" rel="stylesheet">
+
+
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Great+Vibes|Open+Sans:400,700&display=swap" rel="stylesheet">
+    <!-- Fontasowe -->
     <script src="https://kit.fontawesome.com/58231aedda.js" crossorigin="anonymous"></script>
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <title>Mi Portafolio</title>
-    <link rel="icon" type="image/png" href="assets/img/favicon.ico">
+
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+
+    <title>YoSoy</title>
+    <link rel="icon" type="image/png" href="assets/img/favicon.ico" >
   </head>
-
-
   <header>
-     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top mb-3">
-          <a class="navbar-brand" href="#"><span><img src="assets/img/portafolio-logo.jpg" width="45%"></span></a>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top ">
+          <a class="navbar-brand" href="#"><img src="assets/img/portafolio-logo.jpg" width="60%"></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
+
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
               <li class="nav-item active">
-                <a class="nav-link" href="#inicio">Sobre Mí</a>
+                <a class="nav-link" href="#sobremi">Sobre Mí <span class="sr-only">(current)</span></a>
               </li>
+              <li class="nav-item active">
+                <a class="nav-link" href="#experiencia">Experiencia</a>
+              </li>
+
               <li class="nav-item">
-                <a class="nav-link" href="#tres">Experiencia</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Trabajos
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="#cuatro">Empresa 1</a>
-                  <div class="dropdown-divider"></div>
-                  <a class="dropdown-item" href="#cinco">Empresa 2</a>
-                  <div class="dropdown-divider"></div>
-                  <a class="dropdown-item" href="#">Empresa 3</a>
-                </div>
+                <a class="nav-link" href="#mistrabajos">Trabajos</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#contacto">Contacto</a>
               </li>
             </ul>
           </div>
-    </nav>
+        </nav>
   </header>
-
   <body>
 
 
-      <!-- Imagen Central  -->
-      <div class="content" id="inicio">
-          <div class="text-center">
-            <img src="assets/img/yosoy.png" width="50%">
-          </div>
-          <div class="idname">
-             <h2></h2>
-             <h1></h1>
-          </div>
-       </div>
+    <h1 id="sobremi" class="mb-5 pt-5 text-center">José Ruben Cerrada Meza</h1>
+    <div class="text-center">
+       <img class="imagen mb-4" src="assets/img/yosoy.png">
+    </div>
 
-     <!-- Resumen  -->
-     <div class="container">
-       <div class="row justify-content-md-center">
-         <div class="col col-lg-6 text-center">
-           <h5>Economista Universidad de Los Andes 2000. Mérida. Venezuela. MsC Políticas Económicas Públicas. Universidad de Los Andes 2007. Especialista en Formulación y Evaluación de Proyectos 2005.  </h5>
-          </div>
-       </div>
-       <div class="row justify-content-md-center">
-         <div class="col col-lg-3 text-center">
-           <hr>
-         </div>
-      </div>
 
-      <div class="row justify-content-md-center">
-        <div class="col col-lg-3">
+    <section id="experiencia" class="container-fluid d-none d-sm-block py-4 text-center" >
+      <h6>Economista Universidad de Los Andes 2000. Mérida. Venezuela. MsC Políticas Económicas Públicas. Universidad de Los Andes 2007. <br> Especialista en Formulación y Evaluación de Proyectos 2005.  </h6>
+    </section>
+
+
+    <section class="container-fluid d-none d-sm-block py-4 " id="icons-section">
+      <div class="row">
+        <div class="col ml-4 mr-4 ">
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </div>
-        <div class="col-md-auto">
-        </div>
-        <div class="col col-lg-3">
+        <div class="col ml-4 mr-4">
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </div>
+    </div>
+   </section>
+
+   <h2 class="text-uppercase text-center">Mi experiencia</h2>
+  <h2 class="text-uppercase text-center mb-4">______________</h2>
+
+
+
+  <section class="container text-center">
+    <div class="container p-6">
+      <div class="row">
+        <div class="col-md-6 p-4" >
+            <img src="assets/img/anilloeconomista.jpg"  alt="colaciones" width="25%">
+            <div class="card-body">
+              <h5 class="card-title">Economista</h5>
+              <p class="card-text">2000-2006</p>
+            </div>
+        </div>
+        <div class="col-md-6 p-4">
+            <img src="assets/img/vba.jpg"  alt="desayunos" width="30%">
+            <div class="card-body">
+              <h5 class="card-title">Microsoft Excel VBA</h5>
+              <p class="card-text">2007-2008</p>
+            </div>
+        </div>
       </div>
     </div>
-     <!-- Resumen  -->
+  </section>
 
-     <!-- Experiencia  -->
-     <div class="container colorfondo">
-       <div class="row justify-content-md-center">
-           <div class="col col-lg-6 text-center">
-             <h2 class="text-uppercase mb-4">Mi Experiencia</h2>
+
+  <div class="container text-center ">
+    <h2 class="display-3 text-uppercase" >Mis últimos trabajos</h2>
+  </div>
+
+
+<section class="container my-3 text-center bg-primary" id="mistrabajos">
+  <div class="container p-6">
+    <div class="row">
+      <div class="col-md-4 p-4" >
+          <img src="assets/img/webpage1Meet_Coffee.jpg"  alt="Web Page Meet & Coffee" width="100%">
+          <div class="card-body">
+            <h5 class="card-title">Web Page Meet & Coffee</h5>
+            <p class="card-text">Ricas y deliciosas colaciones para el disfrute de un momento con sabores y olores chileno venezolanos</p>
           </div>
-       </div>
-
-       <div class="row justify-content-md-center">
-         <div class="col col-lg-4 text-center">
-           <hr>
-         </div>
       </div>
-
-      <div class="row justify-content-md-center">
-        <div class="col col-md-4 text-center">
-          <img src="assets/img/imagenexcel.jpg" alt="vba excel">
-        </div>
-
-        <div class="col col-md-4 text-center">
-          <img src="assets/img/imageneconomia.jpg" alt="imagen Formulación de proyectos económicos">
-        </div>
+      <div class="col-md-4 p-4">
+          <img src="assets/img/webpage2Iguana.jpg"  alt="Web Page Iguana" width="100%">
+          <div class="card-body">
+            <h5 class="card-title">Web Page Iguana</h5>
+            <p class="card-text">Ricos y deliciosos desayunos para el disfrute de un momento con sabores y olores chileno venezolanos</p>
+          </div>
       </div>
-    </div>
-     <!-- Experiencia  -->
-
-     <!-- Web Page  -->
-     <div class="container my-4 pb-4">
-       <div class="row justify-content-md-center">
-        <div class="col col-md-4 text-center">
-          <img src="assets/img/webpage1Meet&Coffee.jpg" alt="Web Page Meet & Coffee" width="90%">
-        </div>
-        <div class="col col-md-4 text-center">
-          <img src="assets/img/webpage2Iguana.jpg" alt="Web Page Iguana" width="90%">
-        </div>
-        <div class="col col-md-4 text-center">
-          <img src="assets/img/webpage3Suricata.jpg" alt="Web Page Suricata" width="90%">
-        </div>
+      <div class="col-md-4 p-4">
+          <img src="assets/img/webpage3Suricata.jpg"  alt="Web Pages Suricata" width="100%">
+          <div class="card-body">
+            <h5 class="card-title">Web Page Suricata</h5>
+            <p class="card-text">Ricas y deliciosas bebidas para el disfrute de un momento con sabores y olores chileno venezolanos</p>
+          </div>
       </div>
-    </div>
-     <!-- Web Pages  -->
-
-<section id="contacto">
-<div class="text-center p-4 ml-4">
-<div class="typeform-widget" data-url="https://joseruben.typeform.com/to/IsMPPg" style="width: 100%; height: 400px;"></div> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script> <div style="font-family: Sans-Serif;font-size: 12px;color: #999;opacity: 0.5; padding-top: 5px;"> powered by <a href="https://admin.typeform.com/signup?utm_campaign=IsMPPg&utm_source=typeform.com-01DZ9XRXJ9SE9VFH8BWTW1C1KR-free&utm_medium=typeform&utm_content=typeform-embedded-poweredbytypeform&utm_term=ES" style="color: #999" target="_blank">Typeform</a> </div>
 </div>
+
+<div class="row">
+      <div class="col-md-4 p-4">
+          <img src="assets/img/webpage4Cuppon.jpg"  alt="Web Pages Cuppon" width="100%">
+          <div class="card-body">
+            <h5 class="card-title">Web Page Cuppon</h5>
+            <p class="card-text">Ricas y deliciosas verduras para el disfrute de un momento con sabores y olores chileno venezolanos</p>
+
+          </div>
+      </div>
+      <div class="col-md-4 p-4">  <!--padding 4 -->
+          <img src="assets/img/webpage5Ricomida.jpg"  alt="Web Page Ricomida" width="100%">
+          <div class="card-body">
+            <h5 class="card-title">Web Page Ricomida</h5>
+            <p class="card-text">Ricos y deliciosos dulces para el disfrute de un momento con sabores y olores chileno venezolanos</p>
+          </div>
+      </div>
+      <div class="col-md-4 p-4">
+          <img src="assets/img/webpage6Ecer.jpg"  alt="Web Pages Ecer" width="100%">
+          <div class="card-body">
+            <h5 class="card-title">Web Page ecer.cl</h5>
+            <p class="card-text">Ricas y deliciosas empanadas para el disfrute de un momento con sabores y olores chileno venezolanos</p>
+          </div>
+      </div>
+</div>
+</div>
+</section>
+
+
+<section class="text-center ml-4" id="contacto">
+
+<div class="typeform-widget" data-url="https://joseruben.typeform.com/to/IsMPPg" style="width: 100%; height: 400px;"></div> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script> <div style="font-family: Sans-Serif;font-size: 12px;color: #999;opacity: 0.5; padding-top: 5px;"> powered by <a href="https://admin.typeform.com/signup?utm_campaign=IsMPPg&utm_source=typeform.com-01DZ9XRXJ9SE9VFH8BWTW1C1KR-free&utm_medium=typeform&utm_content=typeform-embedded-poweredbytypeform&utm_term=ES" style="color: #999" target="_blank">Typeform</a> </div>
+
 </section>
 
 
 
 
 
+    <footer class="text-center bg-primary">
+          <div class="container my-5 py-3">
+      <div class="row">
+        <div class="col-4 p-4 text-right">
+          <h2 class="font-weight-bold"><span>Rubén</span> <br>&copy; 2020</h2>
+        </div>
+        <div class="col-8 bg-primary text-white rounded pt-4 pb-5">
+          <div id="blogCarousel" class="carousel slide" data-ride="carousel">
+
+            <ol class="carousel-indicators">
+              <li data-target="#blogCarousel" data-slide-to="0" class="active"></li>
+              <li data-target="#blogCarousel" data-slide-to="1"></li>
+            </ol>
+
+            <div class="carousel-inner">
+
+              <div class="carousel-item active text-center">
+                <div class="row">
+                  <div class="col-3">
+                    <i class="fab fa-git-alt fa-2x" data-container="body" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="GitHub"></i>
+                  </div>
+                  <div class="col-3">
+                    <i class="fab fa-linkedin fa-2x" data-container="body" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="linkedin"></i>
+                  </div>
+                  <div class="col-3">
+                    <i class="fab fa-twitter fa-2x" data-container="body" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="Twitter"></i>
+                  </div>
+                  <div class="col-3">
+                    <i class="fab fa-facebook fa-2x" data-container="body" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="Facebook"></i>
+                  </div>
+                </div>
+              </div>
+
+              <div class="carousel-item text-center">
+                <div class="row">
+                  <div class="col-3">
+                    <i class="fab fa-500px fa-2x" data-container="body" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="500px"></i>
+                  </div>
+                  <div class="col-3">
+                    <i class="fab fa-apple fa-2x" data-container="body" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="Apple"></i>
+                  </div>
+                  <div class="col-3">
+                    <i class="fab fa-aviato fa-2x" data-container="body" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="Aviato"></i>
+                  </div>
+                  <div class="col-3">
+                    <i class="fab fa-d-and-d fa-2x" data-container="body" data-toggle="popover" data-trigger="hover" data-placement="bottom" data-content="Dungeons & Dragons"></i>
+                  </div>
+                </div>
+              </div>
+
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
 
-
+    </footer>
 
 
 
 
 
     <!-- Optional JavaScript -->
-
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 
     <!--jQuery 3.3.1 sin slim-->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 
-
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-
-    <!-- suavizar scroll  -->
+    <!--Mi script-->
     <script src="assets/js/script.js"></script>
   </body>
 </html>
