arreglos para version movil

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
     <p class="mb-5 pt-5 text-center"></p>
     <div class="text-center" id="sobremi">
-       <img class="imagen mb-4" src="assets/img/yosoy.png">
+       <img class="imagen mb-4 img-fluid pt-5" src="assets/img/yosoy.png">
     </div>
 
 
@@ -100,7 +100,7 @@
 
 
   <div class="container text-center ">
-    <h3 class="display-3 text-uppercase" >Mis últimos trabajos</h3>
+    <h3 class="display-3 text-uppercase texto1">Mis últimos trabajos</h3>
   </div>
 
 
